<resources>
    <string name="app_name">MSU Companion</string>
    <string name="spartan_head_logo">Spartan head logo</string>
    <string name="msu_companion_logo">MSU Companion logo</string>

    <string name="greetingText">Hello, %1$s!</string>
    <string name="contactViewText">View Trusted Contacts</string>
    <string name="sessionViewText">View Session History</string>
    <string name="createSessionText">Create a new session</string>
    <string name="resumeSessionText">Go to ongoing session</string>

    <string name="usernameHint">Username</string>
    <string name="emailOrUsernameHint">Email or Username</string>
    <string name="emailHint">Email</string>
    <string name="fullNameHint">Full Name</string>
    <string name="passwordHint">Password</string>
    <string name="passwordRetypeHint">Retype Password</string>
    <string name="loginText">Login</string>
    <string name="signupText">Sign Up</string>
    <string name="logoutText">Logout</string>
    <string name="signupQuery">Not yet registered?</string>

    <string name="addContact">Add New Contact</string>
    <string name="addContactText">Add Contact</string>
    <string name="contactNameHint">Name</string>
    <string name="contactPhoneHint">Phone Number</string>
    <string name="saveText">Save</string>

    <string name="searchContactHint">Search by Name or Phone Number</string>
    <string name="editContactText">Edit Contact</string>
    <string name="deleteText">Delete</string>

    <string name="destinationSearchText">Search for destination</string>
    <string name="noDestinationSelectedText">No destination selected</string>
    <string name="selectDestinationText">%1$s\n%2$s</string>"
    <string name="useLocationText">Use selected location</string>

    <string name="tvDestinationText">Destination: %1$s</string>
    <string name="tvCurrentLocationText">Current Location: %1$s</string>
    <string name="tvDistanceText">Distance to destination: %.2f meters</string>
    <string name="tvStatusText">Status: %1$s</string>
    <string name="startWalkText">Start Walk Session</string>
    <string name="endWalkText">End Walk Session</string>

    <string name="sessionTitle">Start a new session</string>
    <string name="finalDest">Final Destination</string>
    <string name="destinationHint">e.g., Shaw Hall, 1855 Place</string>
    <string name="selectContactsText">Select contacts to notify</string>
    <string name="summaryAllContacts">All contacts will be notified\n<i>(including any added later)</i></string>
    <string name="summaryNoContact">No contact selected</string>
    <string name="notifyIntervalLabel">Notify contacts every</string>
    <string name="minutesUnit">minutes</string>

    <plurals name="summarySelectedContacts">
        <item quantity="one">%d contact selected</item>
        <item quantity="other">%d contacts selected</item>
    </plurals>

    <string name="GoBack"><u>Go back</u></string>

    <string name="doneText">Done</string>
    <string name="cancelText">Cancel</string>
    <string name="selectAllText">Select all</string>

    <string name="destinationNamePlaceholder">Destination Name</string>
    <string name="timePlaceholder">Time</string>
    <string name="sessionStatus">Status:\n%1$s</string>

    <string name="timeRangeText">%1$s - %2$s</string>
    <string name="fromText">From:\n%1$s</string>
    <string name="toText">To:\n%1$s</string>

</resources>