<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SessionActivity">

    <TextView
        android:id="@+id/sessionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sessionTitle"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp" />

    <TextView
        android:id="@+id/destinationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalDest"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/destinationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="location"
        android:minHeight="48dp"
        android:hint="@string/destinationHint"
        android:focusable="false"
        android:clickable="true"
        android:cursorVisible="false"
        android:inputType="none"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/startWalkingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sessionTitle"
        android:onClick="onStartSession"
        android:backgroundTint="@color/msu_green"/>

    <TextView
        android:id="@+id/goBackFromSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:onClick="onGoBack"
        android:text="@string/GoBack"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="264dp"
        android:layout_height="79dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp"
        android:contentDescription="@string/msu_companion_logo"
        android:src="@drawable/msucompanionlogo" />

</LinearLayout>