<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/spartanHeadImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/spartan_head_logo"
        android:src="@drawable/spartanhead" />

    <TextView
        android:id="@+id/greetingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetingText"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contactViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onViewContacts"
        android:text="@string/contactViewText"
        android:backgroundTint="@color/msu_green"/>

    <Button
        android:id="@+id/sessionViewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onViewSessionHistory"
        android:text="@string/sessionViewText"
        android:backgroundTint="@color/msu_green"/>

    <Button
        android:id="@+id/startSessionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/createSession"
        android:onClick="onStartSession"
        android:backgroundTint="@color/msu_green"/>


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:backgroundTint="@color/msu_green"
        android:onClick="onLogOut"
        android:text="@string/logoutText" />

</LinearLayout>
