<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="16dp"
    android:paddingVertical="10dp">

    <TextView
        android:id="@+id/destinationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/status"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/destinationNamePlaceholder"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/sessionStatus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/destinationName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/status"
        android:maxLines="1"
        android:text="@string/timePlaceholder"
        android:textSize="16sp" />
</RelativeLayout>