<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SignupActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signupText"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress"
                android:drawablePadding="8dp"
                android:hint="@string/emailHint"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="username"
                android:drawablePadding="8dp"
                android:hint="@string/usernameHint"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:drawablePadding="8dp"
                android:hint="@string/fullNameHint"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:drawablePadding="8dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/passwordRetype"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:drawablePadding="8dp"
                android:hint="@string/passwordRetypeHint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="onSignUp"
                android:text="@string/signupText"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/msu_green"/>

            <TextView
                android:id="@+id/goBackFromSignup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onGoBackToLogin"
                android:text="@string/GoBack"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>