<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingHorizontal="16dp"
            android:contentDescription="@string/msu_companion_logo"
            android:src="@drawable/msucompanionlogo" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/loginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loginText"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="emailAddress,username"
                android:drawablePadding="8dp"
                android:hint="@string/emailOrUsernameHint"
                android:inputType="textEmailAddress|text"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="password"
                android:drawablePadding="8dp"
                android:hint="@string/passwordHint"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:onClick="onLogin"
                android:text="@string/loginText"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/msu_green"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/signupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/signupQuery"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSignUp"
            android:text="@string/signupText"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:backgroundTint="@color/msu_green"/>

    </LinearLayout>
</LinearLayout>