<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".EditOrDeleteContactActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/EditContactText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editContactText"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="name"
                android:drawablePadding="8dp"
                android:hint="@string/contactNameHint"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:autofillHints="phone"
                android:drawablePadding="8dp"
                android:hint="@string/contactPhoneHint"
                android:inputType="phone"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:onClick="onSave"
                android:text="@string/saveText"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/msu_green"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="24dp"
                android:background="#c0c0c0" />

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="24dp"
                android:onClick="onDelete"
                android:text="@string/deleteText"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                android:backgroundTint="@color/msu_green"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>